--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+# Application name and server settings
 spring.application.name=hr-worker
+server.port=8001
+
+# Database configuration for H2
+spring.datasource.url=jdbc:h2:mem:testdb;
+spring.datasource.username=sa
+spring.datasource.password=
+
+
+# Enable H2 console for manual checking and debugging
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
